# fanfictl

./: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
docs/: USAGE.md
scripts/: pixiv_refresh_token.py
src/fanfictl/: cli.py  config.py  content.py  exporters.py  keystore.py  library.py  models.py  pixiv.py  quota.py  storage.py  translate.py  webapp.py  workflow.py
src/fanfictl/static/: app.css
src/fanfictl/templates/: dashboard.html  reader.html  reader_chapter.html  reader_series.html
tests/: test_quota.py  test_web.py
